[project]
name = "gptexploration"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Matthew Deakyne", email = "mdeakyne@gmail.com" }
]
dependencies = [
    "requests~=2.31.0",
    "openai~=0.27.8",
    "python-dotenv~=1.0.0",
    "tqdm~=4.65.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyterlab~=4.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true
